--- a/src/components/GlobalHeader/index.less
+++ b/src/components/GlobalHeader/index.less
@@ -99,6 +99,28 @@
   }
 }
 
+.slogan {
+  padding-top: 10%;
+  font-family: '华文隶书';
+  font-size: 20px;
+  //text-shadow: 5px 3px 1px #676767;
+  color: SlateGray;
+  font-weight: bolder;
+}
+
+.sloganmobile {
+  padding-top: 10%;
+  font-family: '华文隶书';
+  font-size: 16px;
+  color: SlateGray;
+  font-weight: bolder;
+}
+
+@font-face {
+  font-family: '华文隶书';
+  src: url('https://skyorange.com//Resources/ttf/STLITI.TTF');
+}
+
 @media only screen and (max-width: @screen-md) {
   .header {
     :global(.ant-divider-vertical) {
