--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <title>Ant Design Pro</title>
+    <title>SkyOrange 天行汇广 萃外凝宸</title>
     <link rel="icon" href="https://skyorange.com/console/favicon.png" type="image/x-icon" />
   </head>
   <body>
